--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,23 @@ a {
     color: #004aad;
 }
 
+/* ------------- */
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat";
+    font-weight: 400;
+    margin-top: 1rem;
+    margin-bottom: .5rem;
+    line-height: 1.25;
+    color: #313131;
+    text-rendering: optimizeLegibility;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    -webkit-hyphens: manual;
+    -ms-hyphens: manual;
+    hyphens: manual;
+} 
+
 
 /*---------- Navbar ----------*/
 
@@ -322,6 +339,46 @@ a {
 }
 
 
+/* ---------- Features ---------- */
+
+
+.title {
+    padding: 5rem 0 0 0;
+    text-align: center;
+}
+
+.features-section {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.features-section .feature {
+    width: 250px;
+    text-align: center;
+}
+
+.features-section .feature .feature-icon {
+    height: 100px;
+    font-size: 5rem;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.features-section .feature .feature-icon img {
+    height: 100px;
+    font-size: 5rem;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.features-section .feature .feature-description {
+    margin: 1rem 0 1rem 0;
+}
+
+
 /*---------- Media queries 1050px ----------*/
 
 
@@ -348,10 +405,17 @@ a {
         width: 100%;
     }
 
+
+/* Features */
+
+
+    .features-section {
+        flex-direction: column;
+    }
+
 }
 
 
-/* --------------- */ 
 
 
 
