--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ a {
 .title {
     padding: 5rem 0 0 0;
     text-align: center;
+    color: var(--color-text);
 }
 
 .title hr {
@@ -275,6 +276,7 @@ a {
 }
 
 .features-section {
+    color: var(--color-text);
     width: 100%;
     display: flex;
     flex-direction: row;
