--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,112 @@ a {
 }
 
 
+/* ------- */
+
+
+/*---------- Study groups ----------*/
+
+body {
+    font-family: inherit;
+    font-size: 1rem;
+    line-height: inherit;
+    color: inherit;
+    margin-top: 70px;
+    padding-top: 0;
+    counter-reset: captions;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+} 
+
+.row {
+    font-size: 0.8rem;
+    text-align: center;
+} 
+
+.row .titles {
+    padding: 5rem 0 0 0;
+}
+
+.row .titles h1 {
+    margin: 0 0 10px 0;
+} 
+
+.row .groups-section {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.row .groups-section .column {
+    width: 100%;
+}
+
+.group-avatar {
+    border-radius: 50%;
+    width: 80%;
+    max-width: 150px;
+    height: auto;
+    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
+    background-image: linear-gradient(top, #f4f1ee, #fff);
+    border-radius: 50%;
+    box-shadow: 0px 8px 10px 0px rgb(0 0 0 / 30%), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgb(204 198 197 / 50%);
+    -webkit-transition: all .1s linear;
+    transition: all .1s linear;
+}
+
+.group-avatar {
+    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
+    background-image: linear-gradient(top, #f4f1ee, #fff);
+    border-radius: 50%;
+    box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, .3), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgba(204,198,197,.5);	
+    -webkit-transition: all .1s linear;
+    transition: all .1s linear;
+}
+.group-avatar:after{
+    color:#e9e6e4;
+    content: "";
+    display: block;
+    font-size: 30px;
+    height: 30px;
+    text-decoration: none;
+    text-shadow: 0px -1px 1px #bdb5b4, 1px 1px 1px white;
+    position: absolute;
+    width: 30px;
+}
+
+.group-avatar:hover {
+    opacity: 0.7;
+}
+
+.group-avatar:active{
+    background-image: -webkit-linear-gradient(top, #efedec, #f7f4f4);
+    background-image: linear-gradient(top, #efedec, #f7f4f4);
+    box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0px -3px 1px 1px rgba(204,198,197,.5);
+}
+
+.group-avatar:active:after{
+    color:#dbd2d2;
+    text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
+}
+
+.network-icon {
+    list-style: none;
+}
+
+@media screen and (max-width: 800px) {
+
+    .row .groups-section {
+    flex-direction: column;
+    }
+
+}
+
 
 
 
