--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,16 @@ a {
     color: #004aad;
 }
 
+.titles {
+    padding: 5rem 0 0 0;
+    text-align: center;
+    color: var(--color-text);
+}
+
+.titles hr {
+    margin: 1rem 0 1rem 0;
+}
+
 
 /*---------- Navbar ----------*/
 
@@ -265,16 +275,6 @@ a {
 /* ---------- Features ---------- */
 
 
-.title {
-    padding: 5rem 0 0 0;
-    text-align: center;
-    color: var(--color-text);
-}
-
-.title hr {
-    margin: 1rem 0 1rem 0;
-}
-
 .features-section {
     color: var(--color-text);
     width: 100%;
@@ -405,6 +405,7 @@ a {
 
 /*---------- Study groups ----------*/
 
+
 body {
     font-family: inherit;
     font-size: 1rem;
@@ -422,19 +423,11 @@ body {
 } 
 
 .row {
-    font-size: 0.8rem;
     text-align: center;
 } 
 
-.row .titles {
-    padding: 5rem 0 0 0;
-}
-
-.row .titles h1 {
-    margin: 0 0 10px 0;
-} 
-
 .row .groups-section {
+    color: var(--color-text);
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -446,7 +439,7 @@ body {
     width: 100%;
 }
 
-.group-avatar {
+.row .groups-section .column .group-avatar {
     border-radius: 50%;
     width: 80%;
     max-width: 150px;
@@ -459,7 +452,7 @@ body {
     transition: all .1s linear;
 }
 
-.group-avatar {
+.row .groups-section .column .group-avatar {
     background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
     background-image: linear-gradient(top, #f4f1ee, #fff);
     border-radius: 50%;
@@ -467,7 +460,8 @@ body {
     -webkit-transition: all .1s linear;
     transition: all .1s linear;
 }
-.group-avatar:after{
+
+.row .groups-section .column .group-avatar:after{
     color:#e9e6e4;
     content: "";
     display: block;
@@ -479,22 +473,22 @@ body {
     width: 30px;
 }
 
-.group-avatar:hover {
+.row .groups-section .column .group-avatar:hover {
     opacity: 0.7;
 }
 
-.group-avatar:active{
+.row .groups-section .column .group-avatar:active{
     background-image: -webkit-linear-gradient(top, #efedec, #f7f4f4);
     background-image: linear-gradient(top, #efedec, #f7f4f4);
     box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0px -3px 1px 1px rgba(204,198,197,.5);
 }
 
-.group-avatar:active:after{
+.row .groups-section .column .group-avatar:active:after{
     color:#dbd2d2;
     text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
 }
 
-.network-icon {
+.row .groups-section .column .avatar-title .network-icon {
     list-style: none;
 }
 
