--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,23 @@ a {
     margin: 1rem 0 1rem 0;
 }
 
+/* ------- */
+body {
+    font-family: inherit;
+    font-size: 1rem;
+    line-height: inherit;
+    color: inherit;
+    margin-top: 70px;
+    padding-top: 0;
+    counter-reset: captions;
+    margin: 0;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+} 
+
 
 /*---------- Navbar ----------*/
 
@@ -305,6 +322,71 @@ a {
 }
 
 
+/*---------- Study groups ----------*/
+
+
+.row {
+    text-align: center;
+} 
+
+.row .groups-section {
+    color: var(--color-text);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.row .groups-section .column {
+    width: 100%;
+}
+
+.row .groups-section .column .group-avatar {
+    border-radius: 50%;
+    width: 80%;
+    max-width: 150px;
+    height: auto;
+    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
+    background-image: linear-gradient(top, #f4f1ee, #fff);
+    border-radius: 50%;
+    box-shadow: 0px 8px 10px 0px rgb(0 0 0 / 30%), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgb(204 198 197 / 50%);
+    -webkit-transition: all .1s linear;
+    transition: all .1s linear;
+}
+
+.row .groups-section .column .group-avatar:after{
+    color:#e9e6e4;
+    content: "";
+    display: block;
+    font-size: 30px;
+    height: 30px;
+    text-decoration: none;
+    text-shadow: 0px -1px 1px #bdb5b4, 1px 1px 1px white;
+    position: absolute;
+    width: 30px;
+}
+
+.row .groups-section .column .group-avatar:hover {
+    opacity: 0.7;
+}
+
+.row .groups-section .column .group-avatar:active{
+    background-image: -webkit-linear-gradient(top, #efedec, #f7f4f4);
+    background-image: linear-gradient(top, #efedec, #f7f4f4);
+    box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0px -3px 1px 1px rgba(204,198,197,.5);
+}
+
+.row .groups-section .column .group-avatar:active:after{
+    color:#dbd2d2;
+    text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
+}
+
+.row .groups-section .column .avatar-title .network-icon {
+    list-style: none;
+}
+
+
 /*---------- Media queries 1050px ----------*/
 
 
@@ -397,102 +479,9 @@ a {
         flex-direction: column;
     }
 
-}
 
+/* Study groups */
 
-/* ------- */
-
-
-/*---------- Study groups ----------*/
-
-
-body {
-    font-family: inherit;
-    font-size: 1rem;
-    line-height: inherit;
-    color: inherit;
-    margin-top: 70px;
-    padding-top: 0;
-    counter-reset: captions;
-    margin: 0;
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-} 
-
-.row {
-    text-align: center;
-} 
-
-.row .groups-section {
-    color: var(--color-text);
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.row .groups-section .column {
-    width: 100%;
-}
-
-.row .groups-section .column .group-avatar {
-    border-radius: 50%;
-    width: 80%;
-    max-width: 150px;
-    height: auto;
-    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
-    background-image: linear-gradient(top, #f4f1ee, #fff);
-    border-radius: 50%;
-    box-shadow: 0px 8px 10px 0px rgb(0 0 0 / 30%), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgb(204 198 197 / 50%);
-    -webkit-transition: all .1s linear;
-    transition: all .1s linear;
-}
-
-.row .groups-section .column .group-avatar {
-    background-image: -webkit-linear-gradient(top, #f4f1ee, #fff);
-    background-image: linear-gradient(top, #f4f1ee, #fff);
-    border-radius: 50%;
-    box-shadow: 0px 8px 10px 0px rgba(0, 0, 0, .3), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgba(204,198,197,.5);	
-    -webkit-transition: all .1s linear;
-    transition: all .1s linear;
-}
-
-.row .groups-section .column .group-avatar:after{
-    color:#e9e6e4;
-    content: "";
-    display: block;
-    font-size: 30px;
-    height: 30px;
-    text-decoration: none;
-    text-shadow: 0px -1px 1px #bdb5b4, 1px 1px 1px white;
-    position: absolute;
-    width: 30px;
-}
-
-.row .groups-section .column .group-avatar:hover {
-    opacity: 0.7;
-}
-
-.row .groups-section .column .group-avatar:active{
-    background-image: -webkit-linear-gradient(top, #efedec, #f7f4f4);
-    background-image: linear-gradient(top, #efedec, #f7f4f4);
-    box-shadow: 0 3px 5px 0 rgba(0,0,0,.4), inset 0px -3px 1px 1px rgba(204,198,197,.5);
-}
-
-.row .groups-section .column .group-avatar:active:after{
-    color:#dbd2d2;
-    text-shadow: 0px -1px 1px #bdb5b4, 0px 1px 1px white;
-}
-
-.row .groups-section .column .avatar-title .network-icon {
-    list-style: none;
-}
-
-@media screen and (max-width: 800px) {
 
     .row .groups-section {
     flex-direction: column;
