--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,11 @@
     padding: 0;
     text-decoration: none;
     font-family: 'Montserrat';
+    box-sizing: border-box;
     --color-base: #004aad;
     --color-white: #FFFFFF;
     --color-text: #313131;
+    --background-border-color: #34495e;
 }
 
 a {
@@ -387,7 +389,115 @@ body {
 }
 
 
-/*---------- Media queries 1050px ----------*/
+/*---------- Secondary navbar ----------*/
+
+
+#navbar {
+    width: 100%;
+    padding: 5rem 0 0 0;
+    margin: 0 0 1rem 0;
+    text-align: center;
+    border: 1px solid var(--background-border-color);
+}
+
+
+#navbar .secondary-nav-logo {
+    font-size: 1.2rem;
+}
+
+#navbar .secondary-nav-logo img {
+    height: 50px;
+}
+
+#navbar .secondary-nav-logo #search {
+    width: 100%; 
+    font-size: 16px; 
+    padding: 12px 20px 12px 40px; 
+    border: 1px solid var(--background-border-color);
+    margin-bottom: 12px; 
+    background:#fff url("https://francosbenitez.github.io/mepc/img/search.svg") .6rem .9rem no-repeat;
+}
+
+#navbar .ul-container {
+    margin: 1rem 0 0 0;
+    width: 100%;
+    height: 10rem;
+    overflow-y: scroll;
+    border: 1px solid var(--background-border-color);
+}
+
+#navbar .ul-container li {
+    list-style: none;
+}
+
+#navbar .ul-container li a {
+    display: block;
+    text-align: left;
+    font-size: 1rem;
+    margin: 0.2rem 0 0.2rem 0;
+    padding: 0.5rem;
+    text-decoration: none;
+    color: #004aad;
+}
+
+#navbar .ul-container li a:link,
+a:visited,
+a:active {
+    color: #004aad;
+}
+
+#navbar .ul-container li a:hover {
+    color: var(--color-white);
+    background-color: var(--color-base);
+    transition: background-color 1s ease;
+}
+
+
+/*---------- Sections ----------*/
+
+
+#main-doc {
+    padding: 0.5rem;
+}
+
+#main-doc header {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin: 0.5rem 0 0.5rem 0;
+}
+
+#main-doc .main-section header {
+    margin: 5rem 0 1rem 0;
+}
+
+#main-doc .main-section .img-container {
+    width: 100%;
+    max-width: 35rem;
+    margin: 0 auto;
+}
+
+#main-doc .main-section .img-container img {
+    display: block;
+    width: 100%;
+    height: auto;
+    margin: 1rem 0 1rem 0;
+}
+
+#main-doc .main-section hr {
+    margin: 1rem 0 1rem 0;
+}
+
+#main-doc .main-section h3 {
+    margin: 1rem 0 1rem 0;
+}
+
+#main-doc .main-section .properties li {
+    margin: 0 0 0 3rem;
+    font-size: 1.1rem;
+}
+
+
+/*---------- Media query max. 1050px ----------*/
 
 
 @media (max-width: 1050px) {
@@ -485,6 +595,45 @@ body {
 
     .row .groups-section {
     flex-direction: column;
+    }
+
+}
+
+
+/*---------- Media query min. 850px ----------*/
+
+
+@media (min-width: 850px) {
+
+
+    /* Secondary navbar */
+    
+    
+    #navbar {
+        width: 20rem;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        display: flex;
+        flex-flow: column nowrap;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #navbar .ul-container {
+        width: 100%;
+        height: auto;
+        overflow: auto;
+        border: none;
+    }
+
+
+/* Sections */
+
+
+    #main-doc {
+        margin: 0 0 0 21rem;
     }
 
 }
