--- a/css/styles.css
+++ b/css/styles.css
@@ -639,6 +639,32 @@ a:active {
 }
 
 
+/* ------- */
+
+
+.section-form {
+    color: var(--color-text);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.section-form form {
+    width: 250px;
+    text-align: center;
+}
+
+.form-wrapper {
+    font-size: 5rem;
+    color: var(--color-base);
+    text-align: center;
+    margin: 0 auto;
+    width: 100px;
+    margin: 1rem 0 1rem 0;
+}
+
 
 
 
