--- a/css/styles.css
+++ b/css/styles.css
@@ -656,7 +656,7 @@ a:active {
 
 .section-form .form {
     text-align: center;
-    padding: 5rem 0 0 0;
+    padding: 5rem 0 10rem 0;
     text-align: center;
     width: 50%;
 }
@@ -676,6 +676,10 @@ a:active {
     flex-direction: column;
     width: 100%;
     margin: 0.5rem auto;
+}
+
+.form-control {
+    padding: .5rem .5rem .5rem .5rem;
 }
 
 .submit-btn {   
