--- a/css/styles.css
+++ b/css/styles.css
@@ -308,10 +308,16 @@ body {
 }
 
 .features-section .feature .feature-icon {
-    font-size: 5rem;
     color: var(--color-base);
     text-align: center;
     margin: 0 auto;
+}
+
+.features-section .feature .fab {
+    font-size: 5rem;
+    color: var(--color-base);
+    text-align: center;
+    margin: 1rem;
 }
 
 .features-section .feature .feature-icon img {
