--- a/css/styles.css
+++ b/css/styles.css
@@ -553,6 +553,12 @@ a:active {
     padding: .5rem .5rem .5rem .5rem;
 }
 
+input[type=text]:focus, 
+input[type=email]:focus, 
+textarea[name=message]:focus{
+    outline: 2px solid var(--color-base);   
+}
+
 .section-form .form .form-wrapper .submit-btn {   
     display: inline-block;
     text-align: center;
