--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,14 @@ a {
     margin: 1rem 0 1rem 0;
 }
 
+.alert-note {
+    background-color: #f0f7fb;
+    border-left: solid 4px #3498db;
+    padding: 12px;
+    width: 50%;
+    margin: auto;
+}
+
 /* ------- */
 body {
     font-family: inherit;
@@ -339,14 +347,6 @@ body {
 .row {
     text-align: center;
 } 
-
-.row .titles .alert-note {
-    background-color: #f0f7fb;
-    border-left: solid 4px #3498db;
-    padding: 12px;
-    width: 50%;
-    margin: auto;
-}
 
 .row .groups-section {
     color: var(--color-text);
