--- a/css/styles.css
+++ b/css/styles.css
@@ -419,7 +419,7 @@ body {
     padding: 5rem 0 0 0;
     margin: 0 0 1rem 0;
     text-align: center;
-    border: 1px solid var(--background-border-color);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 /*
