improve navbar styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ body {
 .nav-ul {
     width: 100%;
     text-align: center;
+    height: 18rem;
 }
 
 .nav-ul li {
@@ -637,6 +638,10 @@ textarea[name=message]:focus{
         transform: translateX(105%);
         transition: transform 0.5s ease-in;
         overflow-x: hidden;
+    }
+
+    .nav-ul li {
+        padding: 0 0 0 0;
     }
 
     .nav-btn {
