--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ a {
     margin: 1rem 0 1rem 0;
 }
 
+
 /* ------- */
 body {
     font-family: inherit;
@@ -523,6 +524,16 @@ a:active {
 /*---------- Contact ----------*/
 
 
+/* ------------ */
+.contact .feature-icon {
+    transition: all 0.7s ease-in-out;
+}
+
+.contact .feature-icon:hover{
+    transform: rotateY(360deg);
+}
+/*------------ */
+
 .titles .alert-note-right {
     background-color: #f0f7fb;
     border-right: solid 4px #3498db;
@@ -538,6 +549,7 @@ a:active {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
+    background: linear-gradient(180deg, var(--color-base), var(--color-white))
 }
 
 .section-form .form {
