--- a/css/styles.css
+++ b/css/styles.css
@@ -109,28 +109,44 @@ body {
     font-family: 'Montserrat';
     font-weight: 700;
     text-transform: uppercase;
+    padding: 15px;
+    position: relative;
+    transition: all 2s;
+}
+
+.nav-ul li a:hover {
+    color: var(--color-white);
+    z-index: 1;
 }
 
 .nav-ul li a:after {
-    content: "";
     position: absolute;
-    z-index: -1;
+    bottom: 0;
+    left: 0;
     right: 0;
-    width: 0;
-    bottom: 0px;
-    background: var(--color-base);
-    height: 4px;
-    transition-property: width;
-    transition-duration: 0.3s;
-    transition-timing-function: ease-out;
+    margin: auto;
+    width: 0%;
+    color: transparent;
+    background: var(--background-border-color);
+    height: 1px;
+    text-align: left;
+    content: '.';
+    margin: 0;
+    opacity: 0;
+    transition: all .2s;
 }
 
-.nav-ul li a:hover:after,
-.nav-ul li a:focus:after,
-.nav-ul li a:active:after {
-    left: 0;
-    right: auto;
+.nav-ul li a:hover:after {
     width: 100%;
+    z-index: -10;
+    animation: fill 1s forwards;
+    -webkit-animation: fill 1s forwards;
+    -moz-animation: fill 1s forwards;
+    opacity: 1;
+}
+
+.nav-ul li a:before {
+    transition: all .2s;
 }
 
 .nav-btn {
@@ -143,6 +159,28 @@ body {
     margin: 5px;
     background-color: var(--color-base);
     transition: all 0.3s ease;
+}
+
+
+/* Animation */
+
+
+@-webkit-keyframes fill {
+
+    0% {
+      width: 0%;
+      height: 1px;
+    }
+    50% {
+      width: 100%;
+      height: 1px;
+    }
+    100% {
+      width: 100%;
+      height: 100%;
+      background: var(--color-text);
+    }
+
 }
 
 
