--- a/css/styles.css
+++ b/css/styles.css
@@ -79,20 +79,20 @@ body {
 .nav-logo svg {
     height: 50px;
     position: absolute;
-    padding-left: 5rem;
+    margin-left: 5rem;
     fill: var(--color-base);
-    stroke: var(--color-base);
+       
 }
 
 .nav-logo svg:hover {
     height: 50px;
     position: absolute;
-    padding-left: 5rem;
-    stroke: var(--color-base);
+    margin-left: 5rem;
     fill: var(--color-base);
-    stroke-width: 20px;
+    -webkit-animation: rotate-center 0.6s ease-in-out both;
+    animation: rotate-center 0.6s ease-in-out both;
 }
-
+  
 .nav-ul {
     width: 100%;
     text-align: center;
@@ -174,23 +174,57 @@ body {
 }
 
 
-/* Animation */
+/* Nav-ul animation */
 
 
 @-webkit-keyframes fill {
 
     0% {
-      width: 0%;
-      height: 1px;
+        width: 0%;
+        height: 1px;
     }
+
     50% {
-      width: 100%;
-      height: 1px;
+        width: 100%;
+        height: 1px;
     }
+    
     100% {
-      width: 100%;
-      height: 100%;
-      background: var(--color-text);
+        width: 100%;
+        height: 100%;
+        background: var(--color-text);
+    }
+
+}
+
+
+/* Nav-logo animation */
+
+
+@-webkit-keyframes rotate-center {
+
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+
+}
+
+  @keyframes rotate-center {
+      
+    0% {
+        -webkit-transform: rotate(0);
+        transform: rotate(0);
+    }
+
+    100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
     }
 
 }
@@ -740,6 +774,7 @@ textarea[name=message]:focus{
 
 .resource-card hr {
     margin-top: 1rem;
+    color: var(--color-base);    
 }
 
 .resource-card-description {
@@ -768,7 +803,7 @@ textarea[name=message]:focus{
         height: 36px;
         z-index: 10;
         position: relative;
-        padding-left: 0;
+        margin-left: 0;
     }
 
     .nav-ul {
