--- a/css/styles.css
+++ b/css/styles.css
@@ -89,8 +89,8 @@ body {
     position: absolute;
     margin-left: 5rem;
     fill: var(--color-base);
-    -webkit-animation: rotate-center 0.6s ease-in-out both;
-    animation: rotate-center 0.6s ease-in-out both;
+    -webkit-animation: shake-bottom 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+    animation: shake-bottom 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
 }
   
 .nav-ul {
@@ -201,30 +201,84 @@ body {
 /* Nav-logo animation */
 
 
-@-webkit-keyframes rotate-center {
-
-    0% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0);
+@-webkit-keyframes shake-bottom {
+    
+    0%,
+    100% {
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg);
+      -webkit-transform-origin: 50% 100%;
+              transform-origin: 50% 100%;
     }
 
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
+    10% {
+      -webkit-transform: rotate(2deg);
+              transform: rotate(2deg);
+    }
+
+    20%,
+    40%,
+    60% {
+      -webkit-transform: rotate(-4deg);
+              transform: rotate(-4deg);
+    }
+
+    30%,
+    50%,
+    70% {
+      -webkit-transform: rotate(4deg);
+              transform: rotate(4deg);
+    }
+
+    80% {
+      -webkit-transform: rotate(-2deg);
+              transform: rotate(-2deg);
+    }
+
+    90% {
+      -webkit-transform: rotate(2deg);
+              transform: rotate(2deg);
     }
 
 }
 
-  @keyframes rotate-center {
-      
-    0% {
-        -webkit-transform: rotate(0);
-        transform: rotate(0);
+@keyframes shake-bottom {
+
+    0%,
+    100% {
+      -webkit-transform: rotate(0deg);
+              transform: rotate(0deg);
+      -webkit-transform-origin: 50% 100%;
+              transform-origin: 50% 100%;
     }
 
-    100% {
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
+    10% {
+      -webkit-transform: rotate(2deg);
+              transform: rotate(2deg);
+    }
+
+    20%,
+    40%,
+    60% {
+      -webkit-transform: rotate(-4deg);
+              transform: rotate(-4deg);
+    }
+
+    30%,
+    50%,
+    70% {
+      -webkit-transform: rotate(4deg);
+              transform: rotate(4deg);
+    }
+
+    80% {
+      -webkit-transform: rotate(-2deg);
+              transform: rotate(-2deg);
+    }
+
+    90% {
+      -webkit-transform: rotate(2deg);
+              transform: rotate(2deg);
     }
 
 }
