--- a/css/styles.css
+++ b/css/styles.css
@@ -525,6 +525,8 @@ body {
     box-shadow: 0px 8px 10px 0px rgb(0 0 0 / 30%), inset 0px 4px 1px 1px white, inset 0px -3px 1px 1px rgb(204 198 197 / 50%);
     -webkit-transition: all .1s linear;
     transition: all .1s linear;
+    -webkit-animation: pulsate-bck 0.5s ease-in-out 5 both;
+	animation: pulsate-bck 0.5s ease-in-out 5 both;
 }
 
 .row .groups-section .column .group-avatar:after{
@@ -574,6 +576,48 @@ body {
 
 .row .groups-section .column .avatar-title .network-icon i:hover{
     transform: rotateY(360deg);
+}
+
+
+/* Group-avatar animation */
+
+
+@-webkit-keyframes pulsate-bck {
+
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+
+    50% {
+      -webkit-transform: scale(0.9);
+              transform: scale(0.9);
+    }
+
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+
+}
+
+  @keyframes pulsate-bck {
+
+    0% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+
+    50% {
+      -webkit-transform: scale(0.9);
+              transform: scale(0.9);
+    }
+
+    100% {
+      -webkit-transform: scale(1);
+              transform: scale(1);
+    }
+
 }
 
 
