--- a/css/styles.css
+++ b/css/styles.css
@@ -639,7 +639,7 @@ body {
 
 #navbar {
     width: 100%;
-    padding: 5rem 0 0 0;
+    padding: 5rem .2rem 0 .2rem;
     margin: 0 0 1rem 0;
     text-align: center;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
