--- a/css/styles.css
+++ b/css/styles.css
@@ -127,7 +127,8 @@ body {
 }
 
 .nav-ul li a.is-active {
-    color: var(--color-base);
+    color: var(--color-white);
+    background: var(--color-text);
 }
 
 .nav-ul li a:hover {
