--- a/css/styles.css
+++ b/css/styles.css
@@ -938,7 +938,7 @@ textarea[name=message]:focus{
     }
 
     .nav-ul li a.is-active {
-        color: var(--color-text);
+        color: var(--color-white);
     }
 
     .nav-btn {
