--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,6 @@
     --color-base: #004aad;
     --color-white: #FFFFFF;
     --color-text: #313131;
-    --background-border-color: #34495e;
 }
 
 a {
@@ -38,7 +37,7 @@ a {
 }
 
 .titles hr {
-    border-color: var(--background-border-color) 1px solid;
+    border-color: var(--color-text) 1px solid;
     margin: 1rem 0 1rem 0;
 }
 
@@ -144,7 +143,7 @@ body {
     margin: auto;
     width: 0%;
     color: transparent;
-    background: var(--background-border-color);
+    background: var(--color-text);
     height: 1px;
     text-align: left;
     content: '.';
@@ -643,7 +642,6 @@ body {
     padding: 5rem .2rem 0 .2rem;
     margin: 0 0 1rem 0;
     text-align: center;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 /*
@@ -659,7 +657,7 @@ body {
     width: 100%; 
     font-size: 16px; 
     padding: 12px 20px 12px 40px; 
-    border: 1px solid var(--background-border-color);
+    border: 1px solid var(--color-text);
     margin-bottom: 12px; 
     background: #fff url("https://francosbenitez.github.io/mepc/img/search.svg") 1rem no-repeat;
 }
@@ -669,7 +667,7 @@ body {
     width: 100%;
     height: 10rem;
     overflow-y: scroll;
-    border: 1px solid var(--background-border-color);
+    border: 1px solid var(--color-text);
 }
 
 #navbar .ul-container li {
@@ -683,13 +681,13 @@ body {
     margin: 0.2rem 0 0.2rem 0;
     padding: 0.5rem;
     text-decoration: none;
-    color: #004aad;
+    color: var(--color-base);
 }
 
 #navbar .ul-container li a:link,
 a:visited,
 a:active {
-    color: #004aad;
+    color: var(--color-base);
 }
 
 #navbar .ul-container li a:hover {
@@ -1044,6 +1042,15 @@ textarea[name=message]:focus{
         flex-flow: column nowrap;
         align-items: center;
         justify-content: center;
+        padding: 5rem 0 0 0;
+        border-right: 1px solid var(--color-text);
+    }
+
+    #navbar .secondary-nav {
+        width: 100%; 
+        font-size: 16px; 
+        padding: 12px 20px 12px; 
+        border-bottom: 1px solid var(--color-text);
     }
 
     #navbar .ul-container {
@@ -1051,9 +1058,10 @@ textarea[name=message]:focus{
         height: auto;
         overflow: auto;
         border: none;
+        margin: 0 0 0 0;
     }
 
-
+    
 /* Sections */
 
 
