--- a/css/styles.css
+++ b/css/styles.css
@@ -670,7 +670,7 @@ body {
     display: block;
     text-align: left;
     font-size: 1rem;
-    margin: 0.2rem 0 0.2rem 0;
+    margin-bottom: 1px;
     padding: 0.5rem;
     text-decoration: none;
     color: var(--color-base);
