--- a/css/styles.css
+++ b/css/styles.css
@@ -627,7 +627,7 @@ body {
     font-size: 1rem;
     padding: 0.5rem;
     text-decoration: none;
-    color: var(--color-base);
+    color: var(--color-text);
 }
 
 #navbar .ul-container li a:link,
@@ -644,7 +644,7 @@ a:active {
 
 #navbar .ul-container .active a {
     color: var(--color-white);
-    background-color: var(--color-base);
+    background-color: var(--color-text);
 }
 
 
