--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ body {
     height: 50px;
     position: absolute;
     margin-left: 5rem;
-    stroke: var(--color-text);
+    stroke: var(--color-base);
     stroke-width: 5px;
     -webkit-animation: shake-bottom 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
     animation: shake-bottom 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
@@ -120,7 +120,7 @@ body {
 
 .nav-ul li a.is-active {
     color: var(--color-white);
-    background: var(--color-text);
+    background: var(--color-base);
 }
 
 .nav-ul li a:hover {
@@ -189,7 +189,7 @@ body {
     100% {
         width: 100%;
         height: 100%;
-        background: var(--color-text);
+        background: var(--color-base);
     }
 
 }
@@ -644,7 +644,7 @@ a:active {
 
 #navbar .ul-container .active a {
     color: var(--color-white);
-    background-color: var(--color-text);
+    background-color: var(--color-base);
 }
 
 
